--- a/pure_css_js/akash/akash-css-animation.html
+++ b/pure_css_js/akash/akash-css-animation.html
@@ -12,6 +12,7 @@
           <div class="molecule"></div>
           <div class="molecule molecule2"></div>
           <div class="molecule molecule3"></div>
+          <div class="molecule molecule4"></div>
 
 
         </div>
@@ -39,19 +40,29 @@
         position: absolute;
         right:5%;
         top: 0;
-        animation: animDown 7s 2s infinite;
+        animation: animDown 7s 2s linear infinite;
         opacity: 0.5;
       }
 
       .molecule2{
         background: yellow;
-        animation-delay: 1.5s;
+        animation-delay: 1.8s;
         top: 10px;
+        right: 6%;
       }
 
       .molecule3{
         background: blue;
-        animation-delay: 2.5s;
+        animation-delay: 2.2s;
+        right: 3%;
+
+      }
+      .molecule4{
+        background: rgb(255, 0, 64);
+        animation-delay: 2.4s;
+        right: 4%;
+        top: 5px;
+
       }
 
       @keyframes animDown {
