--- a/pure_css_js/animate_key1.html
+++ b/pure_css_js/animate_key1.html
@@ -23,6 +23,12 @@
                 opacity: 0;
             }
 
+            10% {
+                transform: translateX(230px) translateY(0px);
+                /* transform: translateY(-60px) rotateX(0.7turn); */
+                opacity: 0;
+            }
+
             50% {
                 /* transform: none; */
                 opacity: 1;
