--- a/pure_css_js/animate_key2_work1.html
+++ b/pure_css_js/animate_key2_work1.html
@@ -1,4 +1,18 @@
 <!doctype html>
+<!-- 
+    TODO: 
+    [x] Create js based animation with keyframes and offset
+    [x] Play Pause
+    [ ] create food and molecules css/svg
+    [ ] create dynamic food and molecules
+    [ ] disolve animation
+    [ ] get number of molecules present on screen and different chambers
+    [ ] and disove logically
+
+
+    protein amino acid fiber starch glucose oxygen carbon dioxide water
+
+ -->
 
 <body>
     <!-- <h2 onclick="this.classList.toggle('animated')">click me to start / stop</h2> -->
@@ -6,12 +20,59 @@
     <span onclick="pauseOnClick()">pause</span>
     <div class="cir1">R</div>
     <style>
+        @-webkit-keyframes shake {
+            0% {
+                -webkit-transform: translate(2px, 1px) rotate(0deg);
+            }
+
+            10% {
+                -webkit-transform: translate(-1px, -2px) rotate(-2deg);
+            }
+
+            20% {
+                -webkit-transform: translate(-3px, 0px) rotate(3deg);
+            }
+
+            30% {
+                -webkit-transform: translate(0px, 2px) rotate(0deg);
+            }
+
+            40% {
+                -webkit-transform: translate(1px, -1px) rotate(1deg);
+            }
+
+            50% {
+                -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+            }
+
+            60% {
+                -webkit-transform: translate(-3px, 1px) rotate(0deg);
+            }
+
+            70% {
+                -webkit-transform: translate(2px, 1px) rotate(-2deg);
+            }
+
+            80% {
+                -webkit-transform: translate(-1px, -1px) rotate(4deg);
+            }
+
+            90% {
+                -webkit-transform: translate(2px, 2px) rotate(0deg);
+            }
+
+            100% {
+                -webkit-transform: translate(1px, -2px) rotate(-1deg);
+            }
+        }
+
         .cir1 {
             width: 20px;
             height: 20px;
             background-color: rgb(195, 43, 226);
             border-radius: 50%;
             text-align: center;
+            animation: shake 0.5s 0.5s linear infinite;
         }
     </style>
     <script>
@@ -28,13 +89,13 @@
         anim1 = el.animate([
             { transform: 'translate(0px,0px)', background: '#ff0040', offset: 0 },
             { transform: 'translate(10px,40px)', background: '#ff004d', offset: 0.10 },
-            { transform: 'translate(40px,60px)', background: '#ff77ab', offset: 0.20 },
-            { transform: 'translate(80px,80px)', background: '#00e756', offset: 0.50, },
-            { transform: 'translate(90px,140px)', background: '#29adff', offset: 0.80 },
-            { transform: 'translate(100px,240px)', background: '#ff77ab', offset: 1 }
+            { transform: 'translate(40px,100px)', background: '#ff77ab', offset: 0.20 },
+            { transform: 'translate(100px,200px)', background: '#00e756', offset: 0.50, },
+            { transform: 'translate(30px,40px)', background: '#29adff', offset: 0.80 },
+            { transform: 'translate(10px,10px)', background: '#ff77ab', offset: 1 }
         ], {
             duration: 2000,
-            direction: 'alternate',
+            // direction: 'alternate',
             iterations: Infinity
         });
 
