--- a/animejs/basic-animationanime-js/index.html
+++ b/animejs/basic-animationanime-js/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Basic animation - anime.js</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style2.css">
 
 </head>
 
@@ -12,12 +12,13 @@
   <!-- partial:index.partial.html -->
   <section>
     <article>
-      <div class="blue" id="blue1"></div>
-      <div class="green" id="green1"></div>
-      <div class="blue"></div>
-      <div class="green"></div>
+      <div class="anim blue"></div>
+      <div class="anim yellow"></div>
+      <div class="anim red"></div>
+      <div class="anim green"></div>
     </article>
   </section>
+  <div class="play-all">ee</div>
   <!-- partial -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
   <script src="./script.js"></script>
