--- a/animejs/basic-animationanime-js/index.html
+++ b/animejs/basic-animationanime-js/index.html
@@ -5,22 +5,23 @@
   <meta charset="UTF-8">
   <title>CodePen - Basic animation - anime.js</title>
   <link rel="stylesheet" href="./style2.css">
+  <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 
 </head>
 
 <body>
   <!-- partial:index.partial.html -->
+  <button class="create">Create1</button>
+  <button class="play">Play</button>
+  <button class="pause">pause</button>
   <section>
-    <article>
+    <article class="holder">
       <div class="anim blue"></div>
-      <div class="anim yellow"></div>
-      <div class="anim red"></div>
-      <div class="anim green"></div>
     </article>
   </section>
-  <div class="play-all">ee</div>
   <!-- partial -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
+  <script src="./anim1.js"></script>
   <script src="./script.js"></script>
 
 </body>
