simple1 bug move

--- a/gasp1/motionpath_helper/index.html
+++ b/gasp1/motionpath_helper/index.html
@@ -13,6 +13,7 @@
   <!-- partial:index.partial.html -->
   <!-- "Rocket Man" by Chris Gannon https://cdpn.io/EjVyXN -->
 
+
   <svg id="motionPath" viewBox="-20 0 557 190">
     <path id="path" fill="none"
       d="M8,102 C15,83 58,25 131,24 206,24 233,63 259,91 292,125 328,155 377,155 464,155 497,97 504,74" />
@@ -49,7 +50,7 @@
       </g>
     </g>
   </svg>
-  <img src="image.png" />
+  <!-- <img src="image.png"> -->
   <!-- partial -->
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js'></script>
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js'></script>
