--- a/gasp1/simple1/index.html
+++ b/gasp1/simple1/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- partial:index.partial.html -->
     <!-- "Rocket Man" by Chris Gannon https://cdpn.io/EjVyXN -->
-    <img src="image.png">
+    <!-- <img src="image.png"> -->
 
     <div class="class1">y</div>
     <div class="class2">y2</div>
@@ -20,6 +20,7 @@
 
     <!-- partial -->
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js'></script>
+    <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/GSDevTools3.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathHelper.min.js'></script>
     <script src="./script.js"></script>
