--- a/gasp1/simple1/index.html
+++ b/gasp1/simple1/index.html
@@ -12,17 +12,19 @@
 <body>
     <!-- partial:index.partial.html -->
     <!-- "Rocket Man" by Chris Gannon https://cdpn.io/EjVyXN -->
-    <!-- <img src="image.png"> -->
+    <img src="system.svg">
 
-    <div class="class1">y</div>
+    <!-- <div class="class1">y</div>
     <div class="class2">y2</div>
-    <div class="class3">y3</div>
+    <div class="class3">y3</div> -->
+    <button id="btn" class="btns">ok</button>
 
     <!-- partial -->
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/GSDevTools3.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathHelper.min.js'></script>
+    <script src="./points.js"></script>
     <script src="./script.js"></script>
 
 </body>
