--- a/gasp1/simple1/index.html
+++ b/gasp1/simple1/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CodePen - MotionPathHelper demo</title>
+    <title>SIM Metabolism</title>
     <link rel='stylesheet' href='https://codepen.io/GreenSock/pen/KKBwQx.css'>
     <link rel="stylesheet" href="./style.css">
 
