--- a/gasp1/simple1/index.html
+++ b/gasp1/simple1/index.html
@@ -14,10 +14,14 @@
     <!-- "Rocket Man" by Chris Gannon https://cdpn.io/EjVyXN -->
     <img src="system.svg">
 
-    <!-- <div class="class1">y</div>
-    <div class="class2">y2</div>
-    <div class="class3">y3</div> -->
-    <button id="btn" class="btns">ok</button>
+    <div id="d1" class="anim">x</div>
+    <div id="d2" class="anim">y</div>
+    <div id="d3" class="anim">z</div>
+    <div class="btns">
+        <button id="btn" class="btn">ok</button>
+        <button id="play" class="btn">play</button>
+        <button id="pause" class="btn">pause</button>
+    </div>
 
     <!-- partial -->
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js'></script>
