doAnimation fun added

--- a/gasp1/simple1/index.html
+++ b/gasp1/simple1/index.html
@@ -14,9 +14,11 @@
     <!-- "Rocket Man" by Chris Gannon https://cdpn.io/EjVyXN -->
     <img src="system.svg">
 
-    <div id="d1" class="anim"></div>
-    <div id="d2" class="anim"></div>
-    <div id="d3" class="anim"></div>
+    <div id="d1" class="anim" data-number="1"></div>
+    <div id="d2" class="anim" data-number="2"></div>
+    <div id="d3" class="anim" data-number="3"></div>
+    <div id="d4" class="anim" data-number="4"></div>
+    <div id="d5" class="anim" data-number="5"></div>
     <div class="btns">
         <button id="btn" class="btn">ok</button>
         <button id="play" class="btn">play</button>
@@ -28,6 +30,7 @@
     <!-- <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathHelper.min.js'></script> -->
     <script src="./points.js"></script>
+    <script src="./script2.js"></script>
     <script src="./script.js"></script>
 
 </body>
