dynamic creation of food

--- a/gasp1/simple1_ravish/index.html
+++ b/gasp1/simple1_ravish/index.html
@@ -14,7 +14,7 @@
     <!-- "Rocket Man" by Chris Gannon https://cdpn.io/EjVyXN -->
     <img src="system.svg">
 
-    <div id="d1" class="anim"></div>
+    <!-- <div id="d1" class="anim"></div> -->
     <!--  <div id="d2" class="anim"></div>
     <div id="d3" class="anim"></div> -->
     <div class="btns">
@@ -29,7 +29,7 @@
     <!-- <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathHelper.min.js'></script> -->
     <script src="./points.js"></script>
-    <script src="./script.js"></script>
+    <script src="./script_add_approach.js"></script>
 
 </body>
 
