--- a/gasp1/motionpath-distribute-gsap/index.html
+++ b/gasp1/motionpath-distribute-gsap/index.html
@@ -21,7 +21,7 @@
 
   <g id="letters" fill="none" stroke="#FFF" stroke-miterlimit="10" stroke-width="2">
     <path id="bodyD" d="M50.48,206V94.16h44c31.52,0,57.28,25.12,57.28,56C151.76,180.88,126,206,94.48,206Z"/>
-    <path id="bodyI1" d="M183.44,94.16V206"/>
+    <!-- <path id="bodyI1" d="M183.44,94.16V206"/>
     <path id="bodyS" d="M280.4,104.88c-7.2-4.64-18.24-7.52-28.16-7.52-19.68,0-32.48,8.48-32.48,21.6,0,37.44,67.2,18.24,66.88,59.84,0,16.48-14.88,27.2-37.92,27.2-14.08,0-29-6.24-38.24-15.68"/>
     <path id="tPipe1" d="M341,206V97"/>
     <path id="tBar1" d="M300.5,97h80"/>
@@ -33,7 +33,7 @@
     <path id="tPipe2" d="M825,206V97"/>
     <path id="tBar2" d="M784.5,97h80"/>
     <path id="bodyE" d="M958,97H888.06V206h72.16"/>
-    <path id="eBar" d="M950.5,148.5h-62"/>
+    <path id="eBar" d="M950.5,148.5h-62"/> -->
   </g>
   
   <line id="underline" x1="480" y1="300" x2="520" y2="300" stroke-width="2" stroke="#88ce02" opacity="0"/>
