--- a/gasp1/motionpath_helper2/index.html
+++ b/gasp1/motionpath_helper2/index.html
@@ -236,10 +236,12 @@
     </radialGradient>
     </defs>
     <g id="container">
-      <path id="path" fill="none"
-      d="M383,-3.002 C390,-22.002 391.507,12.655 385,83.998 380.724,130.877 117.616,61.564 120,99.998 124.126,166.527 121.705,131.543 129,179.998 131.8,198.5976 128.893,194.331 129.183,252.602 129.2332,262.7074 120.231,271.24 119.242,304.13 118.82225,318.07925 119.0843,333.50665 119.70694,349.65712 121.57487,398.10852 118.687,444.067 118.373,485.146 117.96415,538.54805 121.27153,591.31128 123.38664,630.7796 124.52555,652.03177 121.318,767.429 121,778.996 " />
+      <!-- <path id="path" fill="none"
+      d="M383,-3.002 C390,-22.002 391.507,12.655 385,83.998 380.724,130.877 117.616,61.564 120,99.998 124.126,166.527 121.705,131.543 129,179.998 131.8,198.5976 128.893,194.331 129.183,252.602 129.2332,262.7074 120.231,271.24 119.242,304.13 118.82225,318.07925 119.0843,333.50665 119.70694,349.65712 121.57487,398.10852 118.687,444.067 118.373,485.146 117.96415,538.54805 121.27153,591.31128 123.38664,630.7796 124.52555,652.03177 121.318,767.429 121,778.996 " /> -->
       
-
+      <path id="path" fill="none"
+      d=" M370.64999,84.25 C370.64999,115.25 122.81399,68.933 121.64899,92.25 119.64899,132.25 124.64899,131.25 116.64999,176.25  " />
+     
       <g class="anim">
         <path fill="#CCC"
           d="M25 127.7h.5v-16.1H4.1c.9 3.7 2.8 6.9 5.6 9.8 4.3 4.2 9.4 6.3 15.3 6.3m69.9 0h.1c5.9 0 11-2.1 15.2-6.3 2.9-2.9 4.7-6.1 5.6-9.8H94.4v16.1h.5M31.8 31.4c-4.3.9-8.1 2.9-11.4 6.2-4.5 4.5-6.7 9.9-6.7 16.2v13.6c3.3-2.1 7.1-3.2 11.3-3.2.9 0 1.7 0 2.6.1-1.5-3.9-2.3-8.2-2.3-12.7 0-7.6 2.2-14.3 6.5-20.2m74.5 36V53.8c0-6.3-2.2-11.7-6.7-16.2-3-3-6.5-5.1-10.4-6l-.2.8c3.9 5.6 5.8 12 5.8 19.2 0 4.2-.7 8.1-2 11.8l.1.8c.7-.1 1.4-.1 2.2-.1 4.1.1 7.8 1.2 11.2 3.3z" />
@@ -326,10 +328,12 @@ svgimg.setAttributeNS(null,'y','10');
 svgimg.setAttributeNS(null, 'visibility', 'visible');
 svg.appendChild(svgimg);
   </script> -->
+  
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js'></script>
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js'></script>
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathHelper.min.js'></script>
   <script src="./script.js"></script>
+
 
 </body>
 
