--- a/gasp1/ui_2/index.html
+++ b/gasp1/ui_2/index.html
@@ -320,7 +320,7 @@
       <div class="col">
         <h4>Molecule</h4>
         <div class="card-slide">
-          <div class="card">
+          <div class="card" id="proteinBtn">
             <div class="card-img">
               <img src="images/traingle_icon.png" />
             </div>
@@ -328,7 +328,7 @@
               Protein
             </div>
           </div>
-          <div class="card disable">
+          <div class="card ">
             <div class="card-img">
               <img src="images/traingle_icon.png" />
             </div>
@@ -344,7 +344,7 @@
               Fiber
             </div>
           </div>
-          <div class="card">
+          <div class="card" id="starchBtn">
             <div class="card-img">
               <img src="images/traingle_icon.png" />
             </div>
